--- a/manifest.json
+++ b/manifest.json
@@ -8,17 +8,17 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "\\Grammar-App-React-native\\pwa\\chrome-icon\\chrome-icon-144.png",
+      "src": "\\CleverNotesSource\\pwa\\chrome-icon\\chrome-icon-144.png",
       "sizes": "144x144",
       "type": "image/png"
     },
     {
-      "src": "\\Grammar-App-React-native\\pwa\\chrome-icon\\chrome-icon-192.png",
+      "src": "\\CleverNotesSource\\pwa\\chrome-icon\\chrome-icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "\\Grammar-App-React-native\\pwa\\chrome-icon\\chrome-icon-512.png",
+      "src": "\\CleverNotesSource\\pwa\\chrome-icon\\chrome-icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
